[project]
name = "tango_process_markdown"
version = "0.1.0"
description = ""
authors = [
    {name = "Johannes Schmidt", email = "johannes.schmidt.oxa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
urls = {homepage = "https://github.com/johschmidt42/tango-process-markdown", repository = "https://github.com/johschmidt42/tango-process-markdown"}

dependencies = [
    "typer>=0.7.0",
    "httpx>=0.23.3",
    "pyperclip>=1.8.2",
]

[project.optional-dependencies]
lint = [
    "black>=22.12.0",
    "isort>=5.11.4",
    "flake8>=6.0.0",
]

[tool.isort]
profile = "black"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
